Midstream commit working on Java11 migrations
TargetPlatformMapper should get included as a side effect here